sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:15: error: not found: value echangefait
        echangefait=true
        ^